--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+
+    <% if logged_in? %>
+      <script type="text/javascript">
+        window.currentUser = <%= (render template: 'users/show.json.jbuilder').html_safe %>
+      </script>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
