--- a/app/assets/stylesheets/dreams.scss
+++ b/app/assets/stylesheets/dreams.scss
@@ -64,3 +64,19 @@ table {
     }
   }
 }
+
+.zero-state {
+  background-image: url("https://i.pinimg.com/736x/15/43/39/15433955edb97c850ae59ade8648eb00.jpg");
+  width: 500px;
+  height: 200px;
+  margin: 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: right;
+  color: white;
+  font-family: 'Raleway', sans-serif!important;
+  font-style: italic;
+  opacity: .8;
+  border-radius: 5px;
+  font-size: 40px;
+}
