--- a/app/assets/stylesheets/dreams.scss
+++ b/app/assets/stylesheets/dreams.scss
@@ -80,3 +80,11 @@ table {
   border-radius: 5px;
   font-size: 40px;
 }
+
+.search-bar {
+  width: 80%;
+  margin-left: 10%;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
