fix other dreams

--- a/app/views/dreams/import_area.html.erb
+++ b/app/views/dreams/import_area.html.erb
@@ -2,4 +2,4 @@
   <%= file_field_tag :file %>
   <%= submit_tag 'gimme import' %>
 <% end %>
-<%= link_to 'back!!!', '/#/dreams' %>
+<%= link_to 'back!!!', '/#/dreams', class: 'imp-ex' %>
