--- a/app/assets/stylesheets/dreams.scss
+++ b/app/assets/stylesheets/dreams.scss
@@ -99,12 +99,20 @@ table {
   }
 }
 
-a {
-  margin-right: 50px;
+.imp-ex {
   margin-top: 25px;
-  font-family: 'Raleway', sans-serif!important;
+  margin-right: 20px;
+  color: black;
+  background-color: transparent;
+  font-family: "Raleway", sans-serif !important;
   border-radius: 5px;
+  border-color: rgb(216, 216, 216) rgb(209, 209, 209) rgb(186, 186, 186);
+  border-style: solid;
+  border-width: 1px;
+  padding: 1px 7px 2px;
+  text-decoration: none;
   &:hover {
     background-color: #c2e4f9;
+    text-decoration: none;
   }
 }
